# icl_nuim_rgbd_to_rosbag

./: CMakeLists.txt  package.xml
include/handa_to_rosbag/: common.h  conversions.h  handa_to_rosbag.h  pose_loader.h
launch/: handa_to_rosbag.launch
src/: handa_to_rosbag_node.cpp
