<?xml version="1.0"?>
<package format="2">
  <name>handa_to_rosbag</name>
  <version>0.0.0</version>
  <description>
    Converts the handa dataset data into a rosbag.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <maintainer email="alex.millane@gmail.com">Alex Millane</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies. -->
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>opencv3_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>

<!--   <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
 -->

</package>
